force-app/main/default/objects/Purchase_Group__c/Purchase_Group__c.object-meta.xml
<CustomObject>
    <label>Purchase Group</label>
    <pluralLabel>Purchase Groups</pluralLabel>
    <nameField>
        <displayFormat>PG-{000000}</displayFormat>
        <label>Purchase Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Grupo de reservas que se compran juntas al proveedor.</description>
</CustomObject>