force-app/main/default/objects/Purchase_Group__c/fields/Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Booking_Count__c</fullName>
    <label>Booking Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>