force-app/main/default/objects/Purchase_Group__c/fields/Max_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Max_Bookings__c</fullName>
    <label>Max Bookings</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>