force-app/main/default/objects/Purchase_Group__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Purchase_Groups</relationshipName>
    <relationshipLabel>Purchase Groups</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>