force-app/main/default/objects/Purchase_Group__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
            <value><fullName>Full</fullName><default>false</default><label>Full</label></value>
            <value><fullName>Purchased</fullName><default>false</default><label>Purchased</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>