force-app/main/default/objects/Purchase_Group__c/fields/Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendees__c</fullName>
    <label>Total Attendees</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>